syntax = "proto3";

package com.road.yishi.proto.active;

message LuckExchangeInfoListMsg {
  repeated int32 luckExchangeInfo = 1;
}
