syntax = "proto3";

package com.road.yishi.proto.active;

message LuckExchangeOpMsg {
  string exchangeId = 1;
  int32 exchangeCount = 2;
}
