syntax = "proto3";

package com.road.yishi.proto.campaign;

message CampaignFogDataListReqMsg {
  repeated int32 dataList = 1;
}
